--- a/index.html
+++ b/index.html
@@ -360,10 +360,10 @@
 
           <v-row>
             <v-col
-              v-for="({ icon, title, text }, i) in kiosk"
+              v-for="({ icon, title, text, colsmd }, i) in kiosk"
               :key="i"
               cols="12"
-              md="4"
+              :md="colsmd || 4"
             >
               <v-card
                 class="py-12 px-4"
@@ -730,6 +730,7 @@
           {
             icon: 'mdi-help-circle',
             title: 'Спросить в киоске',
+            colsmd: 8,
             text: `
               <ul>
                 <li>где планируется высадить 2397 деревьев и 37559 кустарников? Новые деревья смогут выполнять такую же экологическую функцию как нынешние вековые сосны и дубы только через 40-50 лет. Если приживутся. Но опыт московских парков показывает, что новые деревья очень плохо приживаются, особенно высаженные в подлеске.  В нашем лесопарке нет достаточных открытых пространств для посадки такого количества новых деревьев и кустарников. Планируется масштабная вырубка?</li>
@@ -744,6 +745,7 @@
           {
             icon: 'mdi-bullhorn-outline',
             title: 'Утверждать и требовать',
+            colsmd: 12,
             text: `
             <ol>
 <li>требую сохранить родник Царевна-Лебедь в том виде, в котором он наблюдался на декабрь 2021 г.; проведение нового каптажа с установкой пластиковых ёмкостей, вырубкой деревьев и срезом всего склона может привести к уходу воды в другие водоносные горизонты, а регулярная чистка ёмкостей хлором сделает воду непригодной для питьевого использования, а также погубит все живые организмы на реке Химка! Вместо эко-тропы по берегу реки с бобрами, птицами, ондатрами, мы получим прогулку вдоль мертвого канала! Запланированный каптаж – это полноценные строительные работы, которые запрещены в памятнике природы, которым является родник «Царевна-лебедь»! Тем более, что Подрядчик ООО «Генстрой» умеет благоустраивать только кладбища, в каптаже не компетентен.</li>
