--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@
       <section id="dkn" class="blue lighten-4">
         <div class="py-12"></div>
         <v-container class="text-center">
-          <h2 class="display-2 font-weight-bold mb-3">в Департамент Культурного Наследия</h2>
+          <h2 class="display-2 font-weight-bold mb-3">До конца января</h2>
+          <h4 class="display-1 font-weight-bold mb-3">Напишите в Департамент Культурного Наследия</h2>
 
           <v-responsive
             class="mx-auto mb-8"
@@ -279,7 +280,7 @@
           </v-responsive>
       </section>
 
-      <section id="video" class="grey lighten-3">
+      <section id="press" class="grey lighten-3">
         <div class="py-12"></div>
         <v-container class="text-center">
           <h2 class="display-2 font-weight-bold mb-3">Резонанс</h2>
@@ -304,7 +305,8 @@
                   </v-card-title>
                   <v-card-text>
                     <ul>
-                      <li>ТВ Россия-1, Вести-Москва: <a href="https://www.vesti.ru/video/2376141">Реконструкция парка вызвала у местных жителей вопросы</a></li>
+                      <li>ТВ Россия-1, Вести-Москва:
+                        <br><a href="https://www.vesti.ru/video/2376141">Реконструкция парка вызвала у местных жителей вопросы</a></li>
                       <li>Ведомости:
                         <br><a href="https://tinyurl.com/y7bburf5">Ученые ищут у президента России защиту от разорения московских лесопарков</a> 
                         <br>и <a href="https://tinyurl.com/3zxcbrts">Больше 10 тысяч человек требуют остановить «благоустройство» лесов и парков Москвы</a>
