--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:locale" content="ru_RU" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Сохраним парк Покровское-Стрешнево" />
-  <meta property="og:description" content="Что происходит с парком и как можно помочь сохранить парк." />
+  <meta property="og:description" content="Что происходит, и как помочь сохранить парк Покровское-Стрешнево на Северо-Западе Москвы" />
   <meta property="fb:app_id" content="646168536799261" />
   <meta property="og:image" content="https://pspark.ru/img/park-autumn.jpg" />
   <meta property="og:image:width" content="2048" />
