--- a/index.html
+++ b/index.html
@@ -322,6 +322,10 @@
                         <br>и <a href="https://tinyurl.com/yckk4js9">Ученые РАН попросили президента защитить московские лесопарки</a></li>
                       <li>Канал Сталинград: видео <a href="https://youtube.com/watch?v=aeqk6NSw6WE&feature=share">МОСКВА ПРОТИВ ЛЖИ</a></li>
                       <li>Важные истории: <a href="https://tinyurl.com/233d2c9f">Миллиарды рублей на убийство «зеленых легких»</a> - интервью с Галиной Морозовой</li>
+                      <li>Правовед Сергей Бабурин: <a href="http://nvtornik.ru/archives/32648">Роковая ошибка властей</a></li>
+                      <li>ТВ Россия-1, <a href="https://smotrim.ru/video/2357537">Вести-Москва от 15.11.2021</a> с 11:10</li>
+                      <li><a href="https://www.facebook.com/activatica.org/videos/324551186146215/">Стрим Активатики</a> со съёмок ТВ Россия-1 от 09.11.2021</li>
+                      <li>ТВ Россия-1, <a href="https://youtu.be/fBx6psRyi-g">Вести-Москва от 09.11.2021</a> с 1 часа 10 мин.</li>
                     </ul>
                   </v-card-text>
                 
