--- a/index.html
+++ b/index.html
@@ -987,5 +987,19 @@
   }, 500);
 
 </script>
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+  (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+  m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+  (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+  ym(87334429, "init", {
+       clickmap:false,
+       trackLinks:false,
+       accurateTrackBounce:false
+  });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/87334429" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 </body>
 </html>
