--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900' rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
-  <link rel="shortcut icon" href="img/tree-5.svg">
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <base target="_blank">
   <meta property="og:url" content="https://pspark.ru/" />
   <meta property="og:locale" content="ru_RU" />
