--- a/pspark/public/index.html
+++ b/pspark/public/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="icon" href="<%= BASE_URL %>favicon.svg">
+    <title>Сохраним парк Покровское-Стрешнево</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
-  </head>
+    <base target="_blank">
+    <meta property="og:url" content="https://pspark.ru/" />
+    <meta property="og:locale" content="ru_RU" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Сохраним парк Покровское-Стрешнево" />
+    <meta property="og:description" content="Что происходит, и как помочь сохранить парк Покровское-Стрешнево на Северо-Западе Москвы" />
+    <meta property="fb:app_id" content="646168536799261" />
+    <meta property="og:image" content="https://pspark.ru/img/park-autumn.jpg" />
+    <meta property="og:image:width" content="2048" />
+    <meta property="og:image:height" content="988" />
+    </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Для работы сайта &laquo;Сохраним парк Покровское-Стрешнево&raquo; необходимо включить JavaScript в вашем браузере.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
