meta description upd

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.svg">
     <title>Сохраним парк Покровское-Стрешнево</title>
-    <meta name="description" content="Что не так с проводимой в парке реконструкцией, и что можно сделать, чтобы защитить наш парк. Какие письма и куда отправить. Как связаться с другими защитниками нашего леса." />
+    <meta name="description" content="Суть проблемы: проект реконструкции природного парка превращает его в городской сквер аттракционов. Как можно защитить наш парк. Отправить обращения в прокуратуру, департаменты московского правительства, депутатам, наздорным органам." />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <base target="_blank">
     <meta property="og:url" content="https://pspark.ru/" />
