--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.svg">
     <title>Сохраним парк Покровское-Стрешнево</title>
-    <meta name="description" content="Суть проблемы: проект реконструкции природного парка в 2022 году превращает его в городской сквер аттракционов. Как можно защитить наш лес. Отправить обращения в прокуратуру, департаменты московского правительства, депутатам, наздорным органам. Образцы писем, листовок, жалоб можно скачать на нашем сайте." />
+    <meta name="description" content="Что можно и нужно делать сейчас для уменьшения ущерба природно-историческому парку от варварского «благоустройства», нарушающего законодательство." />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <base target="_blank">
     <meta property="og:url" content="https://pspark.ru/" />
     <meta property="og:locale" content="ru_RU" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Сохраним парк Покровское-Стрешнево" />
-    <meta property="og:description" content="Суть проблемы: проект реконструкции природного парка в 2022 году превращает его в городской сквер аттракционов. Как можно защитить наш лес. Отправить обращения в прокуратуру, департаменты московского правительства, депутатам, наздорным органам. Образцы писем, листовок, жалоб можно скачать на нашем сайте." />
+    <meta property="og:description" content="Что можно и нужно делать сейчас для уменьшения ущерба природно-историческому парку от варварского «благоустройства», нарушающего законодательство." />
     <meta property="fb:app_id" content="646168536799261" />
     <meta property="og:image" content="https://pspark.ru/img/park-autumn.jpg" />
     <meta property="og:image:width" content="2048" />
