Migration to ViteJS

--- a/aqua/index.html
+++ b/aqua/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.svg">
-    <title>Сохраним парк Покровское-Стрешнево</title>
-    <meta name="description" content="Что можно и нужно делать сейчас для уменьшения ущерба природно-историческому парку от варварского «благоустройства», нарушающего законодательство." />
+    <link rel="icon" href="/favicon.svg">
+    <title>Акведук вне закона</title>
+    <meta name="description" content="Почему акведук в парке Покровское-Стрешнево - вне закона" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <base target="_blank">
-    <meta property="og:url" content="https://pspark.ru/" />
+    <meta property="og:url" content="https://pspark.ru/aqua/" />
     <meta property="og:locale" content="ru_RU" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Сохраним парк Покровское-Стрешнево" />
-    <meta property="og:description" content="Что можно и нужно делать сейчас для уменьшения ущерба природно-историческому парку от варварского «благоустройства», нарушающего законодательство." />
+    <meta property="og:title" content="Акведук вне закона" />
+    <meta property="og:description" content="Почему акведук в парке Покровское-Стрешнево - вне закона" />
     <meta property="fb:app_id" content="646168536799261" />
     <meta property="og:image" content="https://pspark.ru/img/park-autumn.jpg" />
     <meta property="og:image:width" content="2048" />
@@ -24,6 +24,6 @@
       <strong>Для работы сайта &laquo;Сохраним парк Покровское-Стрешнево&raquo; необходимо включить JavaScript в вашем браузере.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <script type="module" src="../src/aqueduct.js"></script>
   </body>
 </html>
