/film folder fix

--- a/film/index.html
+++ b/film/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,7 @@
   <p>На 9 июля 2023 года опубликованы первые две части из четырёх.</p>
   <p>
     <a href="https://www.youtube.com/playlist?list=PLhdJDo6vgwsH7cbBDxfh-7X963TxGHUox" title="смотреть фильм">
-      <img src="P-S-film-cover.jpg" alt="обложка фильма" style="width: 100vw; max-width: 500px" />
+      <img src="/img/P-S-film-cover.jpg" alt="обложка фильма" style="width: 100vw; max-width: 500px" />
     </a>
   </p>
   <script>
